nav: Feature complete, got to work out a few data issues and UX

--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -351,8 +351,11 @@
     &-5 {
         z-index: 5;
     }
-    &-10 { // navs should exist here
+    &-10 {
         z-index: 10;
+    }
+    &-20 { // navs should exist here
+        z-index: 20;
     }
     &-auto {
         z-index: auto;
